# cdk-lab-eice

./: .gitignore  README.md  app.py  pyproject.toml
cdk_lab_eice/: cdk_lab_eice_stack.py
tests/unit/: test_cdk_lab_eice_stack.py
