[tool.poetry]
name = "cdk-lab-eice"
version = "0.1.0"
description = ""
authors = ["Violet Vivirand <purpleslovemail@gmail.com>"]
readme = "README.md"
packages = [{include = "cdk_lab_eice"}]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.90.0"
constructs = ">=10.0.0,<11.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
